--- a/app/views/users/home.template.html
+++ b/app/views/users/home.template.html
@@ -1,3 +1,62 @@
-<div style="margin-top: 100px;" bs-loading-overlay bs-loading-overlay-delay="200">
-    <center><h1>{{"home.tieude" | translate }}</h1></center>
+<style>
+.bg-1 {
+	margin-top: 0px;
+    background-color: #1abc9c;
+    color: #ffffff;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.bg-2 {
+    background-color: #474e5d;
+    color: #ffffff;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.bg-3 {
+    background-color: #ffffff;
+    color: #555555;
+}
+.tem-file{
+	border: 1px solid #ddd;
+	box-shadow: 0px 0px 15px 0px #D6D6D6;
+	margin: 2px;
+	/*padding: 5px;*/
+}
+</style>
+<div class="container-fluid bg-1 text-center">
+    <h3>{{"home.tieude" | translate }}</h3>
+    <p>Bảo tàng Thiên nhiên Việt Nam được thành lập theo Nghị định 27/NĐ-CP, ngày 16/01/2004 (nay là Nghị định 108/NĐ-CP ngày 25/12/2012) của Chính phủ. Chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bảo tàng được quy định tại Quyết định số 305/QĐ-KHCNVN, ngày 10/03/2006 (nay là Quyết định số 1738/QĐ-VHL ngày 09/8/2017) của Chủ tịch Viện Hàn lâm Khoa học và Công nghệ Việt Nam.</p>
+    <!-- <h3>I'm an adventurer</h3> -->
+</div>
+<div class="container-fluid bg-2 text-center">
+    <h3>Tài liệu hướng dẫn sử dụng phần mềm</h3>
+    <p>Phần mềm được xây dựng và thiết kế theo chuẩn MVC dựa trên Nodejs phía server và Angularjs phía client</p>
+</div>
+<div class="container-fluid bg-3 text-center">
+    <h3>Các file template excel</h3>
+    <br>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="tem-file">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+            <!-- <img src="birds1.jpg" class="img-responsive" style="width:100%" alt="Image"> -->
+        </div>
+        <div class="col-sm-4">
+            <div class="tem-file">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+            <!-- <img src="birds2.jpg" class="img-responsive" style="width:100%" alt="Image"> -->
+        </div>
+        <div class="col-sm-4">
+            <div class="tem-file">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+            <!-- <img src="birds3.jpg" class="img-responsive" style="width:100%" alt="Image"> -->
+        </div>
+        <div class="col-sm-4">
+            <div class="tem-file">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+            <!-- <img src="birds3.jpg" class="img-responsive" style="width:100%" alt="Image"> -->
+        </div>
+         <div class="col-sm-4">
+            <div class="tem-file">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+            <!-- <img src="birds3.jpg" class="img-responsive" style="width:100%" alt="Image"> -->
+        </div>
+    </div>
 </div>
