--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -323,9 +323,9 @@
 							<span>{{"ani.viTri" | translate }}: </span>
 						</div>
 						<div class="col-sm-10">
-							<input type="radio" name="fDiaDiemThuMau" value="dat-lien" ng-model="datLien" ng-click="starDatLien()" id="datLien"> Trên đất liền
-							<input type="radio" name="fDiaDiemThuMau" value="dao" id="dao" ng-click="starDao()" ng-model="trenDao"> Trên đảo
-							<input type="radio" name="fDiaDiemThuMau" value="bien" id="trenBien" ng-click="starBien()" ng-model="trenBien"> Trên biển
+							<input type="radio" name="fDiaDiemThuMau" ng-model="data.fDiaDiemThuMau" ng-click="starDatLien()" id="datLien" value="Trên đất liền"> Trên đất liền
+							<input type="radio" name="fDiaDiemThuMau" id="dao" ng-click="starDao()" ng-model="data.fDiaDiemThuMau"  value="Trên đảo"> Trên đảo
+							<input type="radio" name="fDiaDiemThuMau" id="trenBien" ng-click="starBien()" ng-model="data.fDiaDiemThuMau" value="Trên biển"> Trên biển
 						</div>
 					</div>
 					<div class="row">
@@ -370,20 +370,20 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row" ng-controller="GoogleMapController">
 				<div class="col-sm-5">
 					<label>24. {{"ani.viTriToaDo" | translate }}: </label>
 				</div>
 				<div class="col-sm-7">
-					<input type="radio" name="fViTriToaDo" id="vitri-dms" ng-checked="'true'" value="true" ng-click="dms()"><span class="label label-default"> DMS</span>
-					<input type="radio" name="fViTriToaDo" id="vitri-dd" value="false" ng-click="dd()"><span class="label label-default"> DD</span>
+					<input type="radio" name="fViTriToaDo" id="vitri-dms" ng-model="data.fViTriToaDo" value="dms"><span class="label label-default"> DMS</span>
+					<input type="radio" name="fViTriToaDo" id="vitri-dd" ng-model="data.fViTriToaDo" value="dd"><span class="label label-default"> DD</span>
 				</div>
 
 				<div class="container-fluid col-sm-12">
 					<div class="col-sm-4">
 						{{"ani.viDo" | translate }} <span class="has-required">(*)</span>:
-						<input type="text" id="viDo" ng-init="showCoor = 'false'; data.viDo=''" ng-show="!showCoor" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
-						<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
+						<input type="text" id="viDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
+						<div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
 							<input type="number" step="1" ng-model= "vido_do" ng-change="latChange()" class = "coordinates" name=""> độ
 							<input type="number" step="1" ng-model= "vido_phut" ng-change="latChange()" class = "coordinates" name=""> phút
 							<input type="number" step="1" ng-model= "vido_giay" ng-change="latChange()" class = "coordinates" name=""> giây
@@ -391,14 +391,14 @@
 					</div>
 					<div class="col-sm-4">
 						{{"ani.kinhDo" | translate }} <span class="has-required">(*)</span>:
-						<input type="text" id="kinhDo" ng-show="!showCoor" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
-						<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
+						<input type="text" id="kinhDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
+						<div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
 							<input type="number" step="1" ng-model="kinhdo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
 							<input type="number" step="1" ng-model="kinhdo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
 							<input type="number" step="1" ng-model="kinhdo_giay" ng-change="lonChange()" class = "coordinates" name=""> giây
 						</div>
 					</div>
-					<div class="col-sm-4" ng-controller="GoogleMapController">
+					<div class="col-sm-4">
 						<label> </label><br>
 						<button type="button" class="btn btn-success" ng-click="showModal()">Chọn trên bản đồ</button>
 					</div>
@@ -960,20 +960,3 @@
 </form>
 <!-- Custom input file -->
 <script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
-
-<script type="text/ng-template" id="storeShowModal.html">
-    <div class="modal-header">
-	    <button type="button" class="close" data-dismiss="modal" data-ng-click="cancel()" aria-hidden="true">&times;</button>
-	    <h4 class="modal-title text-align-center fw-bold mt" id="myModalLabel18">{{ store.name }}</h4>
-	</div>
-	<div class="modal-body bg-gray-lighter">
-	    <div class="row">
-	        <div class="col-md-12">
-	            <ng-map center="{{ center }}" zoom="10">
-	                <marker position="{{ position }}"></marker>
-	            </ng-map>
-	        </div>
-	    </div>
-	</div>
-</script> 
-<script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
