--- a/app/views/modals/storeShowModal.blade.html
+++ b/app/views/modals/storeShowModal.blade.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-12">
             <ng-map center="{{ center }}" zoom="10">
-                <marker position="{{ position }}"></marker>
+                <!-- <marker position="{{ position }}"></marker> -->
             </ng-map>
         </div>
     </div>
