--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -54,7 +54,7 @@
 				<td>{{key + 1}}</td>
 				<td>
 					<input type="checkbox" class="check-box" style="margin: 0px;" ng-model="post.selected" data-id='/content/{{link}}/{{post._id}}?display='>
-					<a class="tenvietnam" style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html"><span class="label label-info">{{post.tenVietNam ? post.tenVietNam : 'Mẫu vật'}}</span></a>
+					<a class="tenvietnam" style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html">{{post.tenVietNam ? post.tenVietNam : 'Mẫu vật'}}</a>
 				</td>
 				<td>
 					{{post.nguoiLapPhieuMauVat ? post.nguoiLapPhieuMauVat : 'Chưa có tên'}}
@@ -200,7 +200,7 @@
 		                width: 30
 		            },
 		            {
-		                width: undefined
+		                width: 100
 		            },
 		            {
 		                width: 150
